--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
 				</section>
 
 				<section>
-					<h2>Heads Up</h2>
+					<h2>Janus</h2>
+          <h3><a href="https://github.umn.edu/Libraries/janus">Libraries/janus</a></h3>
 					<p>
-						reveal.js is a framework for easily creating beautiful presentations using HTML. You'll need a browser with
-						support for CSS 3D transforms to see it in its full glory.
+            A web application that redirects users to various complex URLs according to a simple, consistent API.
 					</p>
+				</section>
 
-					<aside class="notes">
-						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-					</aside>
+				<section>
+					<h2>Janus Demo</h2>
 				</section>
 
 				<!-- Example of nested vertical slides -->
