Put the Janus repo link in a paragraph tag, to preserve case.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 				<section>
 					<h2>Janus</h2>
-          <h3><a href="https://github.umn.edu/Libraries/janus">Libraries/janus</a></h3>
+          <p><a href="https://github.umn.edu/Libraries/janus">Libraries/janus</a></p>
 					<p>
             A web application that redirects users to various complex URLs according to a simple, consistent API.
 					</p>
