Added a 'Pros' slide.

--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@
 					<h2>Janus Demo</h2>
 				</section>
 
+				<section>
+					<h2>Pros</h2>
+          <ul>
+            <li class="fragment">JavaScript: Commonly-known and -used.</li>
+            <li class="fragment">node.js's <a href="https://www.npmjs.org/">npm</a>: Similar to Ruby's Bundler and PHP's Composer.</li>
+            <li class="fragment"><a href="http://browserify.org/">Browserify</a>: Use npm modules in node and/or the client.</li>
+            <li class="fragment">Web scraping: Very easy with node and <a href="https://cheeriojs.github.io/cheerio/">Cheerio</a>.</li>
+          </ul>
+				</section>
+
 				<!-- Example of nested vertical slides -->
 				<section>
 					<section>
