Added a 'url-js Demo' slide.

--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
           </ul>
 				</section>
 
+				<section>
+					<h2>url-js Demo</h2>
+          <p>To test URLs, <a href="https://github.umn.edu/Libraries/url-js">Libraries/url-js</a> scrapes their responses with <a href="https://cheeriojs.github.io/cheerio/">Cheerio</a>, "Fast, flexible, and lean implementation of core jQuery designed specifically for the server." Much easier than scraping with XPath.</p>
+				</section>
+
 				<!-- Example of nested vertical slides -->
 				<section>
 					<section>
