Improved the 'url-js Demo' slide.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 				<section>
 					<h2>url-js Demo</h2>
-          <p>To test URLs, <a href="https://github.umn.edu/Libraries/url-js">Libraries/url-js</a> scrapes their responses with <a href="https://cheeriojs.github.io/cheerio/">Cheerio</a>, "Fast, flexible, and lean implementation of core jQuery designed specifically for the server." Much easier than scraping with XPath.</p>
+          <p>To test URLs, <a href="https://github.umn.edu/Libraries/url-js">Libraries/url-js</a> makes HTTP requests of them with node, and scrapes their responses with <a href="https://cheeriojs.github.io/cheerio/">Cheerio</a>: "Fast, flexible, and lean implementation of core jQuery designed specifically for the server." Much easier than scraping with XPath combined with some other server-side language.</p>
 				</section>
 
 				<!-- Example of nested vertical slides -->
