Improved the 'Cons' slide.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ module.exports = Foo;
             <li class="fragment">node.js: Even less commonly-understood than JavaScript, especially due to its asynchronous nature.</li>
             <li class="fragment">A relatively new technology for OIT's managed VMs.</li>
           </ul>
-          <h3>tl;dr: Node is new to us.</h3>
+          <h3 class="fragment">tl;dr: Node is new to us.</h3>
 				</section>
 
 				<section>
